--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,28 @@
 version: "3.9"
 services:
+  redis:
+    image: "bitnami/redis:7.2"
+    container_name: redis
+    environment:
+      - REDIS_PASSWORD=test
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli -a $$REDIS_PASSWORD --no-auth-warning ping | grep PONG" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - redis-data:/bitnami/redis/data
+
   echo-server:
     build: .
-    image: romanowalex/echo-server:v1.0
+    image: romanowalex/echo-server:v2.0
     container_name: echo-server
     environment:
-      SPRING_PROFILES_ACTIVE: docker
+      SPRING_PROFILES_ACTIVE: full
+      REDIS_HOST: redis
+      REDIS_PASSWORD: test
     ports:
       - "8080:8080"
     healthcheck:
@@ -13,3 +30,9 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    depends_on:
+      redis:
+        condition: service_healthy
+
+volumes:
+  redis-data:
