--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   echo-server:
     build: .
-    image: romanowalex/echo-server:v2.0
+    image: "romanowalex/echo-server:v2.0"
     container_name: echo-server
     environment:
       SPRING_PROFILES_ACTIVE: full
@@ -32,6 +32,18 @@ services:
       retries: 5
     depends_on:
       redis:
+        condition: service_healthy
+
+  jaeger:
+    image: "jaegertracing/all-in-one:1.57"
+    container_name: jaeger
+    ports:
+      - "4318:4318"
+      - "16686:16686"
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    depends_on:
+      echo-server:
         condition: service_healthy
 
 volumes:
