--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,16 @@
 plugins {
     id "idea"
-    id "org.jetbrains.kotlin.jvm" version "1.9.22"
-    id "org.jetbrains.kotlin.plugin.spring" version "1.9.22"
+    id "org.jetbrains.kotlin.jvm" version "1.9.25"
+    id "org.jetbrains.kotlin.plugin.spring" version "1.9.25"
     id "org.jlleitschuh.gradle.ktlint" version "12.1.0"
-    id "org.springframework.boot" version "3.2.4"
-    id "io.spring.dependency-management" version "1.1.4"
+    id "org.springframework.boot" version "3.3.3"
+    id "io.spring.dependency-management" version "1.1.6"
+}
+
+ext {
+    springBootVersion = "3.3.3"
+    testContainerVersion = "1.20.1"
+    testContainersRedisVersion = "2.2.2"
 }
 
 idea {
@@ -14,26 +20,20 @@ idea {
     }
 }
 
-ext {
-    springBootVersion = "3.2.4"
-    testContainerVersion = "1.19.7"
-    testContainersRedisVersion = "2.2.2"
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.boot:spring-boot-dependencies:$springBootVersion"
-    }
-}
-
-[compileKotlin, compileTestKotlin]*.kotlinOptions*.jvmTarget = "17"
-
 ktlint {
     version.set("1.1.1")
 }
 
 repositories {
     mavenCentral()
+}
+
+[compileKotlin, compileTestKotlin]*.kotlinOptions*.jvmTarget = "17"
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.boot:spring-boot-dependencies:$springBootVersion"
+    }
 }
 
 dependencies {
@@ -58,6 +58,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+    }
 }
 
 bootJar {
