--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Echo Server
-description: Echo Server
+description: Simple Echo Server
 author:
   name: Romanow
   email: romanowalex@mail.ru
