--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,15 @@
-name: Build project
+name: Build
 on:
-  [ push ]
+  push:
+    branches:
+      - master
+    paths:
+      - ".github/**"
+      - "src/**"
+      - "Dockerfile"
+      - "build.gradle"
+      - "gradle.properties"
+
 jobs:
   build:
     name: Build
@@ -8,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           distribution: "corretto"
           java-version: "17"
@@ -18,19 +27,4 @@ jobs:
         uses: pre-commit/action@v3.0.0
 
       - name: Build project
-        uses: eskatos/gradle-command-action@v2
-        with:
-          arguments: clean build
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Build images
-        timeout-minutes: 5
-        run: docker compose build
-
-      - name: Push images
-        run: docker compose push
+        run: ./gradlew clean assemble
