--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   redis:
     image: "bitnami/redis:7.2"
@@ -13,14 +12,14 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - redis-data:/bitnami/redis/data
+      - redis:/bitnami/redis/data
 
   echo-server:
     build: .
     image: "romanowalex/echo-server:v2.0"
     container_name: echo-server
     environment:
-      SPRING_PROFILES_ACTIVE: full
+      SPRING_PROFILES_ACTIVE: simple
       REDIS_HOST: redis
       REDIS_PASSWORD: test
     ports:
@@ -34,17 +33,5 @@ services:
       redis:
         condition: service_healthy
 
-  jaeger:
-    image: "jaegertracing/all-in-one:1.57"
-    container_name: jaeger
-    ports:
-      - "4318:4318"
-      - "16686:16686"
-    environment:
-      - COLLECTOR_OTLP_ENABLED=true
-    depends_on:
-      echo-server:
-        condition: service_healthy
-
 volumes:
-  redis-data:
+  redis:
