--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,21 +8,22 @@ spring:
   config:
     import: optional:git.properties
 
-
 management:
-  tracing:
-    enabled: false
   endpoint:
     health.probes.enabled: true
   endpoints:
     web:
       base-path: /manage
       exposure.include: info,health,loggers,prometheus
-  health.diskspace.enabled: false
-  endpoint.health.show-details: always
   metrics.tags:
     application: ${spring.application.name}
+  health.diskspace.enabled: false
+  endpoint.health.show-details: always
   info.git.mode: simple
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
   health:
     readinessstate.enabled: true
     livenessstate.enabled: true
