--- a/build.gradle
+++ b/build.gradle
@@ -1,66 +1,57 @@
 plugins {
     id "idea"
     id "org.jetbrains.kotlin.jvm" version "1.9.25"
-    id "org.jetbrains.kotlin.plugin.spring" version "1.9.25"
-    id "org.jlleitschuh.gradle.ktlint" version "12.1.0"
-    id "org.springframework.boot" version "3.3.3"
-    id "io.spring.dependency-management" version "1.1.6"
+    id "org.jetbrains.kotlin.plugin.spring" version "1.9.25" apply false
+    id "org.jlleitschuh.gradle.ktlint" version "12.1.1" apply false
+    id "org.springframework.boot" version "3.4.11" apply false
+    id "io.spring.dependency-management" version "1.1.7"
+    id "com.gorylenko.gradle-git-properties" version "2.4.2" apply false
 }
 
 ext {
-    springBootVersion = "3.3.4"
-    testContainerVersion = "1.20.4"
-    testContainersRedisVersion = "2.2.2"
+    springBootVersion = "3.4.11"
+    wireMockVersion = "3.10.0"
 }
 
-idea {
-    module {
-        downloadJavadoc = true
-        downloadSources = true
+subprojects { ->
+    apply plugin: "idea"
+    apply plugin: "kotlin"
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+    apply plugin: "io.spring.dependency-management"
+
+    idea {
+        module {
+            downloadJavadoc = true
+            downloadSources = true
+        }
     }
-}
 
-ktlint {
-    version.set("1.1.1")
-}
-
-repositories {
-    mavenCentral()
-}
-
-[compileKotlin, compileTestKotlin]*.kotlinOptions*.jvmTarget = "17"
-
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.boot:spring-boot-dependencies:$springBootVersion"
+    ktlint {
+        version.set("1.2.1")
     }
-}
 
-dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-web"
-    implementation "org.springframework.boot:spring-boot-starter-data-redis"
-    implementation "org.springframework.boot:spring-boot-starter-logging"
-    implementation "org.springframework.boot:spring-boot-starter-actuator"
-    implementation "org.springframework.boot:spring-boot-starter-aop"
-
-    implementation "io.micrometer:micrometer-registry-prometheus"
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.kotlin:kotlin-reflect"
-
-    testImplementation "org.springframework.boot:spring-boot-starter-test"
-    testImplementation "com.redis:testcontainers-redis:$testContainersRedisVersion"
-    testImplementation "org.testcontainers:junit-jupiter:$testContainerVersion"
-
-}
-
-test {
-    useJUnitPlatform()
-    testLogging {
-        showStandardStreams = true
+    repositories {
+        mavenCentral()
     }
-}
 
-bootJar {
-    archiveFileName = "${project.name}.jar"
+    [compileKotlin, compileTestKotlin]*.kotlinOptions*.jvmTarget = "21"
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.boot:spring-boot-dependencies:$springBootVersion"
+        }
+    }
+
+    dependencies {
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+        implementation "org.jetbrains.kotlin:kotlin-reflect"
+        implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
+        implementation "jakarta.validation:jakarta.validation-api"
+    }
+
+    processResources {
+        filesMatching(["**/properties-from-gradle.properties"]) {
+            expand(project.properties)
+        }
+    }
 }
