--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,26 @@
 services:
-  redis:
-    image: "bitnami/redis:7.2"
-    container_name: redis
-    environment:
-      - REDIS_PASSWORD=test
-    ports:
-      - "6379:6379"
-    healthcheck:
-      test: [ "CMD-SHELL", "redis-cli -a $$REDIS_PASSWORD --no-auth-warning ping | grep PONG" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    volumes:
-      - redis:/bitnami/redis/data
-
   echo-server:
-    build: .
-    image: romanowalex/echo-server:v2.0
+    build: ./echo-server
+    image: romanowalex/echo-server:v3.0
     container_name: echo-server
-    environment:
-      SPRING_PROFILES_ACTIVE: simple
-      REDIS_HOST: redis
-      REDIS_PASSWORD: test
     ports:
       - "8080:8080"
     healthcheck:
       test: [ "CMD", "curl", "--silent", "--fail", "http://localhost:8080/manage/health" ]
       interval: 5s
-      timeout: 5s
+      timeout: 1s
       retries: 5
-    depends_on:
-      redis:
-        condition: service_healthy
 
-volumes:
-  redis:
+  echo-client:
+    build: ./echo-client
+    image: romanowalex/echo-client:v3.0
+    container_name: echo-client
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    ports:
+      - "8180:8180"
+    healthcheck:
+      test: [ "CMD", "curl", "--silent", "--fail", "http://localhost:8180/manage/health" ]
+      interval: 5s
+      timeout: 1s
+      retries: 5
