Try to implement k8s load balancer

--- a/echo-client/src/main/resources/application-k8s.yml
+++ b/echo-client/src/main/resources/application-k8s.yml
@@ -1,2 +1,8 @@
+spring:
+  cloud:
+    kubernetes:
+      loadbalancer:
+        mode: service
+
 services:
-  echo-server-url: http://echo-server:8080
+  echo-server-url: ${ECHO_SERVER_URL:http://echo-server:8080}
