--- a/echo-client/src/test/resources/application-test.yml
+++ b/echo-client/src/test/resources/application-test.yml
@@ -1,3 +1,8 @@
+spring:
+  cloud:
+    loadbalancer:
+      enabled: false
+
 services:
   echo-server-url: http://localhost:${wiremock.server.port}
 
