--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,14 @@ plugins {
     id "org.jetbrains.kotlin.jvm" version "1.9.25"
     id "org.jetbrains.kotlin.plugin.spring" version "1.9.25" apply false
     id "org.jlleitschuh.gradle.ktlint" version "12.1.1" apply false
-    id "org.springframework.boot" version "3.4.11" apply false
+    id "org.springframework.boot" version "3.5.7" apply false
     id "io.spring.dependency-management" version "1.1.7"
     id "com.gorylenko.gradle-git-properties" version "2.4.2" apply false
 }
 
 ext {
-    springBootVersion = "3.4.11"
+    springBootVersion = "3.5.7"
+    springCloudVersion = "3.3.0"
     wireMockVersion = "3.10.0"
 }
 
@@ -39,6 +40,7 @@ subprojects { ->
     dependencyManagement {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:$springBootVersion"
+            mavenBom "org.springframework.cloud:spring-cloud-kubernetes-dependencies:$springCloudVersion"
         }
     }
 
