--- a/echo-client/build.gradle
+++ b/echo-client/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-logging"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.cloud:spring-cloud-starter-kubernetes-client-loadbalancer"
     implementation "org.springframework:spring-webflux"
     implementation "io.micrometer:micrometer-registry-prometheus"
 
