--- a/k8s/client.yml
+++ b/k8s/client.yml
@@ -3,11 +3,15 @@ image:
   repository: romanowalex/echo-client
   tag: v3.0
 
-profile: k8s
+profile: k8s # k8s-load-balancer
 ports:
   internal: 8180
 
 # serviceAccountName: spring
+
+environments:
+  - name: ECHO_SERVER_URL
+    value: http://echo-server.default.svc.cluster.local:8080
 
 ingress:
   enabled: true
